# firmware-tryout

./: CMakeLists.txt  README.md  linker.ld  main.c  startup_minimal.c  toolchain-arm-gcc.cmake
